correct overflow issues

--- a/src/components/home/HomeContent.scss
+++ b/src/components/home/HomeContent.scss
@@ -4,7 +4,9 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 100%;
+    height: 100%;  
+    width: 100%;
+    overflow-x: hidden;
 
     p{
         margin-top: 0;
@@ -43,18 +45,22 @@
         font-size: 20px;
         animation: slide-in 1s 3s forwards;
         visibility: hidden;
+        color: ivory;
+        display: block;      
     }
 }
 
 @keyframes slide-in {
     from {margin-left: 150%; width: 300%; visibility: hidden;}
-    to { width: 100% ; visibility: visible; }
+    to { width: 95% ; visibility: visible; }
     
 }
 
 @media screen and (max-width: 862px) {
     .homeContent {
         height: max-content;
+        width: 90%;
+        margin: auto;
 
         &__name{
             text-align: center;
@@ -69,7 +75,6 @@
 
         &__heading{
             text-align: left;
-            margin-left: 5%;
             padding-top: 20px;
             font-size: 35px;
 
@@ -77,7 +82,6 @@
 
         &__explanations{
             margin:0;
-            margin-left: 40%;
             font-size: 18px;
         }
     }
@@ -85,7 +89,6 @@
 
 @media screen and (max-width: 550px) {
     .homeContent {
-    
         &__name{
             font-size: 40px;
         }
@@ -100,7 +103,7 @@
         }
 
         &__explanations{
-            margin-left: 20%;
+            margin-left: 0;     
         }
     }
 }
