--- a/src/components/navs/sideNav/sideNav.scss
+++ b/src/components/navs/sideNav/sideNav.scss
@@ -8,6 +8,7 @@
     font-size: 20px;
     position: fixed;
     bottom: 0;
+    z-index: 1;
 
     li {
         margin-bottom: 20px;
